updated README.md with testing instructions

--- a/config/path.conf
+++ b/config/path.conf
@@ -1,6 +1,7 @@
 [file]
 txs_features = ./data/txs_features.csv
 txs_classes = ./data/txs_classes.csv
+txs_classes_new = ./data/txs_classes_new.csv
 txs_edges = ./data/txs_edgelist.csv
 txs_edges_new = ./data/txs_edgelist_new.csv
 txs_time = ./data/txs_time.csv
