--- a/config/path.conf
+++ b/config/path.conf
@@ -1,5 +1,6 @@
 [file]
 txs_features = ./data/txs_features.csv
+txs_features_new = ./data/txs_features_new.csv
 txs_classes = ./data/txs_classes.csv
 txs_classes_new = ./data/txs_classes_new.csv
 txs_edges = ./data/txs_edgelist.csv
